--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,13 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
 
-<h1>Listing Users</h1>
+<%= will_paginate %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<ul class="users">
+  <% @users.each do |user| %>
+    <%= render user %>
+  <% end %>
+</ul>
 
-  <tbody>
+<%= will_paginate %>
 
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
